--- a/project/CG2-25-LE2C23.vcxproj
+++ b/project/CG2-25-LE2C23.vcxproj
@@ -119,6 +119,9 @@
     <ProjectReference Include="externals\DirectXTex\DirectXTex_Desktop_2022_Win10.vcxproj">
       <Project>{371b9fa9-4c90-4ac6-a123-aced756d6c77}</Project>
     </ProjectReference>
+    <ProjectReference Include="externals\imgui\imgui.vcxproj">
+      <Project>{30013889-c324-4472-b27b-d464eebb94a7}</Project>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="engine\Tool\resources\shaders\Object3d\Object3d.hlsli">
