--- a/project/CG2-25-LE2C23.vcxproj.filters
+++ b/project/CG2-25-LE2C23.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClCompile Include="ImGuiManager.cpp">
       <Filter>engine\Tool</Filter>
     </ClCompile>
+    <ClCompile Include="Franework.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="engine\Tool\resources\shaders\Object3d\Object3d.PS.hlsl">
@@ -273,6 +276,9 @@
     </ClInclude>
     <ClInclude Include="ImGuiManager.h">
       <Filter>engine\Tool</Filter>
+    </ClInclude>
+    <ClInclude Include="Franework.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
