--- a/project/CG2-25-LE2C23.vcxproj
+++ b/project/CG2-25-LE2C23.vcxproj
@@ -31,7 +31,7 @@
     <ClCompile Include="externals\imgui\imgui_widgets.cpp" />
     <ClCompile Include="engine\input\Input.cpp" />
     <ClCompile Include="engine\Tool\Logger.cpp" />
-    <ClCompile Include="Franework.cpp" />
+    <ClCompile Include="Framework.cpp" />
     <ClCompile Include="GameEngine.cpp" />
     <ClCompile Include="ImGuiManager.cpp" />
     <ClCompile Include="main.cpp">
@@ -114,7 +114,7 @@
     <ClInclude Include="engine\Tool\ParticleManager.h" />
     <ClInclude Include="engine\base\SrvManager.h" />
     <ClInclude Include="engine\Tool\ParicleEmitter.h" />
-    <ClInclude Include="Franework.h" />
+    <ClInclude Include="Framework.h" />
     <ClInclude Include="GameEngine.h" />
     <ClInclude Include="ImGuiManager.h" />
   </ItemGroup>
