--- a/project/CG2-25-LE2C23.vcxproj.filters
+++ b/project/CG2-25-LE2C23.vcxproj.filters
@@ -150,14 +150,17 @@
     <ClCompile Include="engine\Tool\ParticleManager.cpp">
       <Filter>engine\Tool</Filter>
     </ClCompile>
-    <ClCompile Include="engine\GAME\GameEngine.cpp">
+    <ClCompile Include="engine\Tool\ImGuiManager.cpp">
+      <Filter>engine\Tool</Filter>
+    </ClCompile>
+    <ClCompile Include="GameScene.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="engine\GAME\Framework.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>engine\GAME</Filter>
     </ClCompile>
-    <ClCompile Include="engine\Tool\ImGuiManager.cpp">
-      <Filter>engine\Tool</Filter>
+    <ClCompile Include="engine\GAME\GameEngine.cpp">
+      <Filter>engine\GAME</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -271,14 +274,17 @@
     <ClInclude Include="engine\Tool\ParticleManager.h">
       <Filter>engine\Tool</Filter>
     </ClInclude>
-    <ClInclude Include="engine\GAME\GameEngine.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="engine\GAME\Framework.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="engine\Tool\ImGuiManager.h">
       <Filter>engine\Tool</Filter>
+    </ClInclude>
+    <ClInclude Include="GameScene.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="engine\GAME\GameEngine.h">
+      <Filter>engine\GAME</Filter>
+    </ClInclude>
+    <ClInclude Include="engine\GAME\Framework.h">
+      <Filter>engine\GAME</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
