--- a/project/CG2-25-LE2C23.vcxproj.filters
+++ b/project/CG2-25-LE2C23.vcxproj.filters
@@ -298,11 +298,11 @@
     <ClInclude Include="TitleScene.h">
       <Filter>engine\scene</Filter>
     </ClInclude>
-    <ClInclude Include="Scene.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="SceneManager.h">
       <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene.h">
+      <Filter>engine\scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
